# thisiscleverson.github.io

./: .gitignore  404.html  Gemfile  README.md  _config.yml  about.md  categories.md  index.html  makefile  new-post.py  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  rss.md  tags.md
.github/workflows/: pelican.yml
_data/: social.yml
_includes/: analytics.html  footer.html  head.html  header.html  seo.html  social.html
_layouts/: about.html  custompost.html  default.html  post.html  tags.html
_posts/: 2025-01-31-welcome-to-jekyll.markdown  2025-02-01-hello-world.md  2025-03-18-ola-mundo.md  2025-04-01-criando-um-dotfiles.md
_sass/: _base.scss  _colors.scss  _layout.scss  _main.scss  _syntax-highlighting.scss
_tag/: vida.md
assets/css/: main.scss
content/pages/: about.md  rss.md  tags.md
content/posts/: 2025-03-18-ola-mundo.md  2025-04-01-criando-um-dotfiles.md  2025-07-20-arvore-binaria.md  2025-09-03-implementado-um-sistema-rbac-simples-com-fastapi.md  2026-01-08-array-a-estrutura-de-dados-mais-fundamental-da-computacao.md  2026-01-21-introducao-a-linguagem-c.md  helloworld.md
theme/static/css/: comments.css  footer.css  header.css  highlighting.css  list-article.css  main.css  page-content.css  reset.css
theme/static/js/: theme-toggle.js
theme/templates/: 404.html  analytics.html  article.html  base.html  footer.html  head.html  header.html  index.html  seo.html  social.html  taglist.html  theme-toggle.html
